commit para la venta rapida